--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Demo of ReactJS + Spring Data REST",
   "dependencies": {
+    "lodash": "4.17.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "rest": "^1.3.1",
