--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lodash": "4.17.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-monaco-editor": "^0.13.0",
     "rest": "^1.3.1",
     "webpack": "^1.12.2"
   },
@@ -17,6 +18,7 @@
     "babel-loader": "^6.2.7",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "copy-webpack-plugin": "^4.5.1"
   }
 }
