--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
   "version": "0.1.0",
   "description": "Demo of ReactJS + Spring Data REST",
   "dependencies": {
-    "lodash": "4.17.5",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-monaco-editor": "^0.13.0",
-    "rest": "^1.3.1",
-    "webpack": "^1.12.2"
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
+    "lodash": "4",
+    "popper.js": "^1.14.3",
+    "react": "^15",
+    "react-dom": "^15",
+    "react-monaco-editor": "^0.13",
+    "rest": "^1.3",
+    "style-loader": "^0.21.0",
+    "webpack": "^1"
   },
   "scripts": {
-    "watch": "webpack --watch -d"
+    "watch": "webpack --watch -d",
+    "start": "webpack-dev-server"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "copy-webpack-plugin": "^4.5.1"
+    "babel-core": "^6.18",
+    "babel-loader": "^6.2",
+    "babel-polyfill": "^6.16",
+    "babel-preset-es2015": "^6.18",
+    "babel-preset-react": "^6.16",
+    "copy-webpack-plugin": "^4.5",
+    "css-loader": "^0.28.11",
+    "webpack-cli": "^3.0",
+    "webpack-dev-server": "^3.1"
   }
 }
