--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.2.41'
+		kotlinVersion = '1.3.41'
 		springBootVersion = '2.0.0.RELEASE'
 	}
 	repositories {
@@ -18,6 +18,10 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
+repositories {
+	mavenCentral()
+}
+
 group = 'com.shoprunner'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -34,26 +38,19 @@ compileTestKotlin {
 	}
 }
 
-repositories {
-    maven {
-        url 'https://artifactory.k8s.devops.s-9.us:443/artifactory/libs-release'
-    }
-}
-
 task webpack(type: Exec) {
     commandLine "$projectDir/node_modules/.bin/webpack", "app/index.js", "$buildDir/js/bundle.js"
 }
 
 
 dependencies {
-    compile('com.shoprunner:baleen:1.0')
-	compile("com.shoprunner:baleen-csv:1.0")
+    compile('com.shoprunner:baleen:1.10.4')
+	compile("com.shoprunner:baleen-csv:1.10.4")
+	compile("io.reactivex.rxjava2:rxkotlin:2.3.0")
     compile("org.springframework.boot:spring-boot-starter-webflux")
 	compile("org.springframework.boot:spring-boot-devtools")
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile('com.opencsv:opencsv:3.7')
-    compile('io.reactivex.rxjava2:rxkotlin:2.0.3')
     runtime("com.fasterxml.jackson.module:jackson-module-kotlin")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
